[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/objects/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Comfortaa-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="L_window_BG" type="Panel" parent="."]
margin_top = 128.0
margin_right = 384.0
margin_bottom = 600.0

[node name="Load_order" type="RichTextLabel" parent="."]
margin_left = 56.0
margin_top = 80.0
margin_right = 322.0
margin_bottom = 117.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Load Order[/center]"
text = "Load Order"
scroll_active = false

[node name="Mod_list" type="RichTextLabel" parent="."]
margin_left = 696.0
margin_top = 80.0
margin_right = 962.0
margin_bottom = 117.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Mod List[/center]"
text = "Mod List"
scroll_active = false

[node name="R_window_BG" type="Panel" parent="."]
margin_left = 640.0
margin_top = 128.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Left_window" type="ScrollContainer" parent="."]
anchor_bottom = 1.0
margin_top = 128.0
margin_right = 384.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Left_window"]
alignment = 1

[node name="Middle_window" type="Control" parent="."]
anchor_left = 0.375
anchor_top = 0.213
anchor_right = 0.625
anchor_bottom = 1.0
margin_left = -3.05176e-05
margin_top = 0.199989
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Middle_window"]
anchor_left = 0.125
anchor_top = 0.136
anchor_right = 0.875
anchor_bottom = 0.831
margin_top = -0.192001
margin_bottom = -0.232025
alignment = 1

[node name="load_folder" type="Button" parent="Middle_window/VBoxContainer"]
margin_top = 107.0
margin_right = 192.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 1 )
text = "Load Folder"

[node name="save_list" type="Button" parent="Middle_window/VBoxContainer"]
margin_top = 136.0
margin_right = 192.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 2 )
text = "Save List"

[node name="clear_load_list" type="Button" parent="Middle_window/VBoxContainer"]
margin_top = 165.0
margin_right = 192.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 2 )
text = "Clear Load Order"

[node name="clear_mod_list" type="Button" parent="Middle_window/VBoxContainer"]
margin_top = 194.0
margin_right = 192.0
margin_bottom = 219.0
custom_fonts/font = SubResource( 2 )
text = "Clear Mod List"

[node name="Right_window" type="ScrollContainer" parent="."]
anchor_left = 0.625
anchor_top = 0.213
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.199989

[node name="VBoxContainer" type="VBoxContainer" parent="Right_window"]
alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 4 )
text = "Version: 0.1"

[connection signal="pressed" from="Middle_window/VBoxContainer/load_folder" to="." method="_on_load_folder_pressed"]
[connection signal="pressed" from="Middle_window/VBoxContainer/save_list" to="." method="_on_save_list_pressed"]
[connection signal="pressed" from="Middle_window/VBoxContainer/clear_load_list" to="." method="_on_clear_load_list_pressed"]
[connection signal="pressed" from="Middle_window/VBoxContainer/clear_mod_list" to="." method="_on_clear_mod_list_pressed"]
